--- a/css/index.css
+++ b/css/index.css
@@ -16,59 +16,40 @@ header {
   box-shadow: 0px 0px 5px maroon;
   z-index: 10000;
   display: flex;
+  position: relative;
+  margin-bottom: 10px;
 }
 
 header h1 {
-  width: 15%;
-  line-height: 80px;
-  padding: 0px 0px 0px 30px;
+  font-size: 25pt;
+  padding: 15px 0px 0px 20px;
   color: black;
+  word-wrap: none;
+  font-family: 'Monoton';
 }
 
-nav {
-  width: 60%;
-  margin-left: 25%;
-}
-
-nav ul {
+.calen {
+  width: 80%;
   display: flex;
-}
-
-nav li {
-  width: 100%;
-  line-height: 80px;
-  list-style: none;
-  border-left: 1px dotted maroon;
-  text-align: center;
-  cursor: pointer;
-}
-
-nav li:last-child {
-  border-right: 1px dotted maroon;
-}
-
-nav li:hover {
-  background-color: snow;
-}
-
-section {
-  width: 100%;
-  display: flex;
+  border: 1px solid red;
+  margin: auto;
+  margin-top: 20px;
   overflow: scroll;
 }
 
-section img {
-  object-fit: cover;
-  background-size: cover;
-  width: 40%;
-  box-sizing: border-box;
-  display: block;
-  margin: 20px 10px;
-  border: 10px solid white;
-  box-shadow: 0px 0px 1px 1px black;
+.calen .date {
+  width: 30%;
+  text-align: center;
+  border: 1px solid black;
+  border-collapse: collapse;
+  padding: 10px;
+}
+
+.date .inside {
+  width: 100%;
+  height: 500px;
 }
 
 footer {
-  position: absolute;
-  bottom: 0;
+  text-align: center;
 }
