--- a/css/index.css
+++ b/css/index.css
@@ -1,33 +1,55 @@
-* {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  box-sizing: border-box;
+.calen {
+    width: 80%;
+    display: flex;
+    border: 1px solid red;
+    margin: auto;
+    margin-top: 20px;
+    overflow: scroll;
 }
 
-body {
-  background-color: white;
+.calen .date {
+    width: 30%;
+    text-align: center;
+    border: 1px solid black;
+    border-collapse: collapse;
+    padding: 10px;
 }
 
-header {
-  width: 100%;
-  height: 80px;
-  background-color: white;
-  box-shadow: 0px 0px 5px maroon;
-  z-index: 10000;
-  display: flex;
-  position: relative;
-  margin-bottom: 10px;
+.date .inside {
+    width: 100%;
+    height: 500px;
 }
 
-header h1 {
-  font-size: 25pt;
-  padding: 15px 0px 0px 20px;
-  color: black;
-  word-wrap: none;
-  font-family: 'Monoton';
+.box {
+    width: 90vw;
+    margin: auto;
 }
 
-footer {
-  text-align: center;
+.box img {
+    width: 90vw;
+    height: 100%;
+}
+
+#money {
+    width: 90%;
+    margin: auto;
+}
+
+#money h2 {
+    padding: 10px;
+}
+
+#money table {}
+
+#money th {
+    text-align: left;
+    padding: 10px;
+    border-bottom: 1px dotted black;
+    border-collapse: collapse;
+}
+
+#money td {
+    text-align: right;
+    border-bottom: 1px dotted black;
+    border-collapse: collapse;
 }
