--- a/css/index.css
+++ b/css/index.css
@@ -1,24 +1,4 @@
-.calen {
-    width: 80%;
-    display: flex;
-    border: 1px solid red;
-    margin: auto;
-    margin-top: 20px;
-    overflow: scroll;
-}
-
-.calen .date {
-    width: 30%;
-    text-align: center;
-    border: 1px solid black;
-    border-collapse: collapse;
-    padding: 10px;
-}
-
-.date .inside {
-    width: 100%;
-    height: 500px;
-}
+/**/
 
 .box {
     width: 90vw;
@@ -30,8 +10,10 @@
     height: 100%;
 }
 
+/**/
+
 #money {
-    width: 90%;
+    width: 80vw;
     margin: auto;
 }
 
@@ -39,7 +21,9 @@
     padding: 10px;
 }
 
-#money table {}
+#money table {
+    width: 80vw;
+}
 
 #money th {
     text-align: left;
@@ -52,4 +36,39 @@
     text-align: right;
     border-bottom: 1px dotted black;
     border-collapse: collapse;
+}
+
+/**/
+
+.calen {
+    width: 90%;
+    margin: auto;
+    margin-top: 20px;
+}
+
+.calen h2 {
+    text-indent: 1em;
+}
+
+.calen .date {
+    width: 100%;
+    text-align: left;
+    display: flex;
+    flex-flow: row nowrap;
+    overflow: scroll;
+}
+
+.date .movies {
+    width: 30%;
+    border: 1px solid black;
+    padding: 5px;
+}
+
+.date .movies:nth-child(2n) {
+    background-color: aliceblue;
+}
+
+.movies .name {
+    word-wrap: break-word;
+    word-break: normal;
 }
