--- a/css/index.css
+++ b/css/index.css
@@ -1,98 +1,103 @@
 /**/
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .box {
-    width: 90vw;
-    margin: auto;
+  width: 90vw;
+  margin: auto;
 }
 
 .box img {
-    width: 90vw;
-    height: 100%;
+  width: 90vw;
+  height: 100%;
 }
 
 /**/
 
 #money {
-    width: 80vw;
-    margin: auto;
+  width: 80vw;
+  margin: auto;
 }
 
 #money h2 {
-    padding: 10px;
-    text-align: center;
+  padding: 10px;
+  text-align: center;
 }
 
 #money table {
-    width: 80vw;
+  width: 80vw;
 }
 
 #money th {
-    text-align: left;
-    padding: 10px;
-    border-bottom: 1px dotted black;
-    border-collapse: collapse;
+  text-align: left;
+  padding: 10px;
+  border-bottom: 1px dotted black;
+  border-collapse: collapse;
 }
 
 #money td {
-    text-align: right;
-    border-bottom: 1px dotted black;
-    border-collapse: collapse;
+  text-align: right;
+  border-bottom: 1px dotted black;
+  border-collapse: collapse;
 }
 
 /**/
 
 .calen {
-    width: 80vw;
-    margin: auto;
-    margin-top: 30px;
+  width: 80vw;
+  margin: auto;
+  margin-top: 30px;
 }
 
 .calen h2 {
-    text-align: center;
+  text-align: center;
 }
 
 .movie {
-    width: 100%;
-    border: 1px solid black;
-    border-radius: 5px;
-    margin: 10px 0px;
-    padding: 20px;
+  width: 100%;
+  border: 1px solid black;
+  border-radius: 5px;
+  margin: 10px 0px;
+  padding: 20px;
 }
 
 .movie h3 {
-    word-break: break-all;
-    margin-bottom: 10px;
+  word-break: break-all;
+  margin-bottom: 10px;
 }
 
 .movie a {
-    text-decoration: none;
-    color: blue;
+  text-decoration: none;
+  color: blue;
 }
 
 .flexbox {
-    display: flex;
+  display: flex;
 }
 
 .flexbox div {
-    width: 30%;
-    border: 1px solid black;
-    border-radius: 5px;
-    text-align: center;
-    padding: 5px;
-    margin: 0 5px;
+  width: 30%;
+  border: 1px solid black;
+  border-radius: 5px;
+  text-align: center;
+  padding: 5px;
+  margin: 0 5px;
 }
 
 /**/
+.time {
+  width: 80vw;
+  margin: auto;
+  margin-top: 20px;
+}
 .time h2 {
-    text-align: center;
+  text-align: center;
 }
 
 /**/
 
 .foot {
-    height: 50px;
+  height: 50px;
 }
