--- a/css/index.css
+++ b/css/index.css
@@ -12,6 +12,7 @@
 .box img {
   width: 90vw;
   height: 100%;
+  box-shadow: 0px 0px 5px black;
 }
 
 /**/
@@ -92,8 +93,21 @@
   margin: auto;
   margin-top: 20px;
 }
+
 .time h2 {
   text-align: center;
+}
+
+.sche div {
+  width: 100%;
+  position: relative;
+  border-bottom: 1px solid black;
+  margin: 20px 0px;
+}
+
+.sche span {
+  position: absolute;
+  right: 5%;
 }
 
 /**/
