--- a/css/unity.css
+++ b/css/unity.css
@@ -28,6 +28,11 @@ header h1 {
   font-family: 'Monoton';
 }
 
+header a {
+	color: black;
+	text-decoration: none;
+}
+
 footer {
   text-align: center;
 }
