--- a/css/unity.css
+++ b/css/unity.css
@@ -28,11 +28,17 @@ header h1 {
   font-family: 'Monoton';
 }
 
-header a,header a::before,header a::after {
-	color: black;
-	text-decoration: none;
+header a,
+header a::before,
+header a::after {
+  color: black;
+  text-decoration: none;
 }
 
 footer {
+  border-top: 0.2px solid gray;
+  margin-top: 50px;
   text-align: center;
+  height: 50px;
+  line-height: 300%;
 }
