--- a/css/unity.css
+++ b/css/unity.css
@@ -33,6 +33,11 @@ header a,header a::before,header a::after {
 	text-decoration: none;
 }
 
+header a,header a:hover,header a:visited {
+	color: black;
+	text-decoration: none;
+}
+
 footer {
   text-align: center;
 }
