--- a/css/index.css
+++ b/css/index.css
@@ -62,11 +62,14 @@
   border-radius: 5px;
   margin: 10px 0px;
   padding: 20px;
+  box-shadow: 0px 0px 3px black;
 }
 
 .movie h3 {
   word-break: break-all;
   margin-bottom: 10px;
+  background-color: rgba(255, 255, 255, 0.5);
+  text-align: center;
 }
 
 .movie a {
@@ -84,7 +87,9 @@
   border-radius: 5px;
   text-align: center;
   padding: 5px;
-  margin: 0 5px;
+  margin: 20px 5px 0px 5px;
+  background-color: rgba(255, 255, 255, 0.5);
+  box-shadow: 0px 0px 1px white;
 }
 
 /**/
