--- a/css/unity.css
+++ b/css/unity.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-color: white;
+  background-color: whitesmoke;
 }
 
 header {
@@ -25,7 +25,7 @@ header h1 {
   padding: 15px 0px 0px 20px;
   color: black;
   word-wrap: none;
-  font-family: 'Monoton';
+  font-family: "Monoton";
 }
 
 header a,
@@ -35,15 +35,22 @@ header a::after {
   text-decoration: none;
 }
 
-header a,header a:hover,header a:visited {
-	color: black;
-	text-decoration: none;
+header a,
+header a:hover,
+header a:visited {
+  color: black;
+  text-decoration: none;
 }
 
 footer {
-  border-top: 0.2px solid gray;
+  background-color: white;
+  border-top: 0.2px solid ghostwhite;
   margin-top: 50px;
   text-align: center;
   height: 50px;
   line-height: 300%;
+}
+
+a {
+  text-decoration: none;
 }
